update dashboard view

--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -80,7 +80,7 @@
     <h3 class="text text-center">{{user.first_name}}'s  Dashboard</h3>
     <div class="intro">
         <div class="card new" id="test">
-            <h4 class="text-muted">Available tests:</h4>
+            <h4 class="text-muted" style="color:#5E5CC0 ;">Available tests:</h4>
             {% if tests %}
             {% for test in tests %}
             <div class="card tests">
@@ -101,7 +101,7 @@
         </div>
         <!--NEWS-->
         <div class="what">
-            <h4 class="text-muted">What's new:</h4>
+            <h4 class="text-muted" style="color:#5E5CC0 ;">What's new:</h4>
             {% if news %}
                 {% for pop in pops %}
                 <div class="card headline">
@@ -118,7 +118,7 @@
         </div>
     </div>
     <div class="card courses">
-        <h4 class="text-muted">My Courses:</h4>
+        <h4 class="text-muted" style="color:#5E5CC0 ;">My Courses:</h4>
         {% if activeCourses %}
         {% for activeCourse in activeCourses %}
         <div class="card angular">
