updating tests and course button

--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -94,7 +94,7 @@
 
             {% else %}
             <div class="card tests">
-                <h4 style="color: #5E5CC0;"><a href="{% url 'testDetail' test.pk %}" style="text-decoration: none; color: #5E5CC0;">
+                <h4 style="color: #5E5CC0;"><a style="text-decoration: none; color: #5E5CC0;">
                     Tests will be posted in a few soon...</a></h4>
                 </div>
             {% endif %}
