--- a/tutors/templates/tutors/tutor.html
+++ b/tutors/templates/tutors/tutor.html
@@ -81,7 +81,7 @@
         </div>
     </div>
 </nav>
-<section class="home">
+<section class="home bg-light" style="height: 100vh;">
     <h3 class="text">My Dashboard</h3>
     <div class="intro">
         <div class="card tutor">
