--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -72,8 +72,8 @@
 
     <div class="container-fluid mt-3 pt-3" style="height:700px;">
         <!--HeroSection-->
-        <div class="container pb-3" >
-            <div class="row pt-5">
+        <div class="container pb-3 whole">
+            <div class="row pt-5 ">
                 <div class="col-4">
                     <div style="height: 50px;">
                     </div>
@@ -95,9 +95,7 @@
 
                 </div>
 
-                <div class="col-8 hero">
-
-                </div>
+                <div class="col-8 hero"></div>
             </div>
 
         </div>
@@ -114,17 +112,16 @@
                     <p class="text-center abtParagraph">
                         We conveniently enable students from across the globe
                         access learning materials from wherever they are.
-                    </p>
-                    <p class="text-center abtParagraph"></p>
-                    <p class="text-center abtParagraph">
                         This in turns connects learners and their tutors from
                         anywhere across the globe.
                     </p>
-                    <p class="text-center abtParagraph">
-                        Create an account with us today and get access
+                        
+                    <p> Create an account with us today and get access
                         to some of the most sought after learning material
                         there is .
-                    </p>
+                    </p> 
+
+                    
                 </div>
                 <div class="colz-7 aboutImg" style="width: 60%;">
                     <img src="{% static 'assets/aboutUs.svg' %}" alt="" width="100%" style="height:50%;">
@@ -167,7 +164,7 @@
                             <div class="row">
                                     <div class="colz" style="width: 50%; margin:auto;">
                                         <div class="single-box">
-                                            <div class="img-area"><img src="{% static 'assets/python.png' %}" alt="" height="250"></div> 
+                                            <div class="img-area"><img src="{% static 'assets/python.png' %}" alt="" height=""></div> 
                                             <div class="img-text">
                                                 <p class="word">
                                                     <!-- <strong>PYTHON</strong> -->
