--- a/tutors/templates/tutors/newTest.html
+++ b/tutors/templates/tutors/newTest.html
@@ -91,7 +91,7 @@
     </div>
 </nav>
 
-    <section>
+    <section class="bg-light" style="height: 100vh;">
         <div class="container">
           <div class="row">
             <div class="col-md-6 mx-auto card new">
