updating tutor dashboard

--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -133,7 +133,7 @@
         {% endfor %}
         {% else %}
         <div class="card tests">
-            <h4 style="color: #5E5CC0;"><a href="{% url 'testDetail' test.pk %}" style="text-decoration: none; color: #5E5CC0;">You're yet to enroll in any program...</a></h4>
+            <h4 style="color: #5E5CC0;"><a href="#" style="text-decoration: none; color: #5E5CC0;">You're yet to enroll in any program...</a></h4>
             </div>
         {% endif %}
         
