--- a/tutors/templates/tutors/tutor.html
+++ b/tutors/templates/tutors/tutor.html
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="{% url 'postedTest' %}">
+                    <a href="#">
                         <i class='bx bx-slideshow icon'></i>
                         <span class="text nav-text">POSTED TESTS</span>
                     </a>
@@ -82,7 +82,7 @@
     </div>
 </nav>
 <section class="home">
-    <h3 class="text">My Dashboard</h3>
+    <h3 class="text">{{user.first_name}}'s Dashboard</h3>
     <div class="intro">
         <div class="card tutor">
             <h4 class="text-muted">Enrollment list:</h4>
