--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,5 +1,5 @@
 .hero{
-    /* background-image: url(/app/static/assets/hero.png);   */
+    background-image: url(/app/static/assets/hero.png);  
     background-repeat: no-repeat;
     height: 750px;
    
