--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="col-8 hero">
-                    <img src="{% static 'assets/hero.png' %}" alt="" width="100%" style="height:50%;">
+                    <!-- <img src="{% static 'assets/hero.png' %}" alt="" width="100%" style="height:50%;"> -->
 
                 </div>
             </div>
