--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,8 +1,9 @@
 .hero{
-    background-image: url(/app/static/assets/hero.png);  
+    /* background-image: url(/app/static/assets/hero.png);   */
     background-repeat: no-repeat;
     height: 750px;
-   
+    background: url('/static/assets/hero.png');  
+
 }
 .abtText{
     margin-top: 3em
